--- a/changelog.txt
+++ b/changelog.txt
@@ -5,12 +5,13 @@
 Release Date: June 10th, 2021
 
 * Changes:
-	* Updated Readme to include better set up instructions 
-	* Renamed shortcodes (breaking change)
-	* General code cleanup (commments/spacing)
+	* Renamed shortcodes (breaking change) 
+	* Updated Readme to include clearer set up instructions 
+	* General code cleanup (commments/spacing) 
 
 * New features:
-	* Admin option to show/hide like count after the content for all posts 
+	* Admin field to show/hide like count after the content for all posts 
+	* Admin field to define included post types  
 
 = 0.5 =
 
